--- a/src/views/RegionView.form
+++ b/src/views/RegionView.form
@@ -115,10 +115,12 @@
                       <Component id="TextIdRegion" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
+                  <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="btnInsert" alignment="1" min="-2" max="-2" attributes="0"/>
-                      <Component id="BtnUpdate" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="BtnDelete" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="BtnUpdate" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="BtnDelete" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
